# ore-infinium-winbuild

./: CMakeLists.txt  ext_chipmunk.cmake  ext_enet.cmake  ext_glm.cmake  ext_oreinfinium.cmake  ext_patch.cmake  ext_protobuf.cmake  ext_qt5.cmake  ext_yamlcpp.cmake  main.wxs  protoc.vcproj  qml.wxs  qt.wxs
installer/: CMakeLists.txt  main.wxs  qt.wxs  qtbase.wxs  qtdeclarative.wxs
patches/: protobuf-include-algorithm.patch  protobuf-vcproj-link.patch  qtbase-fix-cmake-config.patch  qtjsbackend-math.patch
